// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import a 1`] = `
[
  {
    "end": 8,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "a",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import a::* 1`] = `
[
  {
    "end": 11,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "a",
        },
        Wildcard {
          "wildcard": "*",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import a::{b, c}::* 1`] = `
[
  {
    "end": 19,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "a",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "b",
                },
              ],
            },
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "c",
                },
              ],
            },
          ],
        },
        Wildcard {
          "wildcard": "*",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import a::b::c 1`] = `
[
  {
    "end": 14,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "a",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "b",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "c",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import my::lighting::{ pbr }; 1`] = `
[
  {
    "end": 29,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "lighting",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "pbr",
                },
              ],
            },
          ],
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import my::lighting::{ pbr as lights } 1`] = `
[
  {
    "end": 38,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "lighting",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": "lights",
                  "name": "pbr",
                },
              ],
            },
          ],
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import my::lighting::{ pbr, jelly }; 1`] = `
[
  {
    "end": 36,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "lighting",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "pbr",
                },
              ],
            },
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "jelly",
                },
              ],
            },
          ],
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import my::lighting::{ pbr, jelly::jam }; 1`] = `
[
  {
    "end": 41,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "lighting",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "pbr",
                },
              ],
            },
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "jelly",
                },
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "jam",
                },
              ],
            },
          ],
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`import my::lighting::pbr; 1`] = `
[
  {
    "end": 25,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "lighting",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "pbr",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;

exports[`multiline import 1`] = `
[
  {
    "end": 29,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "a",
        },
        SegmentList {
          "list": [
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "b",
                },
              ],
            },
            ImportTree {
              "segments": [
                SimpleSegment {
                  "args": undefined,
                  "as": undefined,
                  "name": "c",
                },
              ],
            },
          ],
        },
        Wildcard {
          "wildcard": "*",
        },
      ],
    },
    "kind": "treeImport",
    "start": 0,
  },
]
`;
